Meetups/M13/kubernetes/worker.yaml
# Source: scaleml/templates/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scaleml-worker
  labels:
    app.kubernetes.io/name: scaleml
    helm.sh/chart: scaleml-0.1.0
    app.kubernetes.io/instance: scaleml
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Tiller
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: scaleml-worker
      app.kubernetes.io/instance: scaleml
  template:
    metadata:
      labels:
        app.kubernetes.io/name: scaleml-worker
        app.kubernetes.io/instance: scaleml
    spec:
      containers:
        - name: scaleml-worker
          image: claudiuvintila/scaleml-worker:v1
          imagePullPolicy: Always
          resources:
            {}

          volumeMounts:
            - mountPath: "/var/www/html/models"
              name: scaleml-pvc
      volumes:
        - name: scaleml-pvc
          persistentVolumeClaim:
            claimName: scaleml-pvc
