Meetups/M13/kubernetes/service.yaml
# Source: scaleml/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scaleml-api
  labels:
    app.kubernetes.io/name: scaleml
    helm.sh/chart: scaleml-0.1.0
    app.kubernetes.io/instance: scaleml
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Tiller
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: scaleml-api
    app.kubernetes.io/instance: scaleml
